--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
 <head>
 	<title>Twitter clone app</title>
-	<link rel="stylesheet" type="text/css" href="/styles/style.min.css">
+	<link rel="stylesheet" type="text/css" href="/builds/styles.min.css">
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	
 	<!-- Latest compiled and minified CSS -->
@@ -18,12 +18,8 @@
 			<tweet-list></tweet-list>
 		</div>
 	</div>
-	<script src="/helpers/timeago.min.js" type="text/javascript"></script>
+	<script src="/helpers/timeago.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-	<script type="text/javascript" src="app.min.js"></script>
-	<script type="text/javascript" src="/controllers/user.min.js"></script>
-	<script type="text/javascript" src="/controllers/tweet.min.js"></script>
-	<script type="text/javascript" src="/directives/profile-box.min.js"></script>
-	<script type="text/javascript" src="/directives/tweets.min.js"></script>
+	<script type="text/javascript" src="/builds/app.min.js"></script>
 </body>
 </html>
