Adding file structure to backend and using mongoose instead of mongojs

--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container-fluid">
-		<div class="row">
+	<div class="container-fluid" ng-controller="UserController">
+		<div class="row" ng-controller="TweetController">
 			<profile-box></profile-box>
 			<tweet-list></tweet-list>
 		</div>
