--- a/client/directives/profile-box.html
+++ b/client/directives/profile-box.html
@@ -1,6 +1,6 @@
 <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-	<div class="panel panel-default" ng-controller="UserController">
-		<div class="panel-body" ng-controller="TweetController">
+	<div class="panel panel-default">
+		<div class="panel-body">
 			<div class="row">
 				<div class="col-md-6 col-xs-12">
 					<!--profile picture-->
