--- a/client/directives/tweets.html
+++ b/client/directives/tweets.html
@@ -1,9 +1,9 @@
-<div class="col-lg-9 col-md-8 col-sm-8 col-xs-12" ng-controller="UserController">
-	<div ng-controller="TweetController">
+<div class="col-lg-9 col-md-8 col-sm-8 col-xs-12">
+	<div>
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<form ng-submit="addTweet()" name="postTweet">
-					<input type="text" name="inputTweet" placeholder="Please enter your tweet and press Enter" class="form-control" ng-model="tweet.text" required/>
+					<input type="text" name="inputTweet" placeholder="Please enter your tweet and press Enter" class="form-control" ng-model="tweet.content" required/>
 				</form>
 			</div>
 		</div>
@@ -19,10 +19,10 @@
 								<img ng-src="/images/{{user.image}}" width="50px" height="50px">
 							</div>
 							<div class="col-lg-11 col-md-10 col-sm-10 col-xs-12">
-								<div><p>@{{user.username}} - {{tweet.timeAgo}}</p></div>
+								<div><p>@{{user.username}} - {{tweet.createdOn}}</p></div>
 								<div>
 									<!-- Tweet-->
-									<p>{{tweet.text}}</p>
+									<p>{{tweet.content}}</p>
 								</div>
 							</div>
 						</div>
