--- a/client/directives/tweets.html
+++ b/client/directives/tweets.html
@@ -7,16 +7,16 @@
 				</form>
 			</div>
 		</div>
-		<div ng-show="countTweets" class="panel panel-default">
+		<div ng-show="data.countTweets" class="panel panel-default">
 			<div class="panel-body">
-				<div class="row" ng-repeat="tweet in tweets">
+				<div class="row" ng-repeat="tweet in data.tweets">
 					<div class="tweet-panel panel panel-default">
 						<div class="panel-body">
 							<button type="button" class="close" aria-label="Close" ng-click="removeTweet(tweet._id)">
 									<span aria-hidden="true">&times;</span>
 							</button>
 							<div class="col-lg-1 col-md-2 col-sm-2 col-xs-12">
-								<img ng-src="/images/{{user.image}}" width="50px" height="50px">
+								<img ng-src="/images/{{user.profilePicture}}" width="50px" height="50px">
 							</div>
 							<div class="col-lg-11 col-md-10 col-sm-10 col-xs-12">
 								<div><p>@{{user.username}} - {{tweet.createdOn}}</p></div>
